# autograder2

./: .env.example  .gitignore  .pre-commit-config.yaml  1_answer.txt  2_answer.txt  3_answer.txt  docker-compose.yml  interactor  interactor.cpp  interactor_debug  manual_test.py  pyproject.toml  solution  solution.cpp  solution_debug  test_debug  test_manual  test_solution.cpp  test_solution.py
.github/workflows/: deploy.yml
autograder/: settings.py  validation_settings.json
autograder/apps/contests/: admin.py  models.py  utils.py  views.py
autograder/apps/contests/migrations/: 0003_contest_writers.py
autograder/apps/index/: admin.py  models.py  tests.py  urls.py  views.py
autograder/apps/index/migrations/: 0011_graderuser_use_writer_formula.py  0012_add_problemoftheweek.py  0013_add_intermediate_potw.py  0014_alter_problemoftheweek_level_and_more.py
autograder/apps/problems/: admin.py  models.py  views.py
autograder/apps/problems/migrations/: 0012_problem_contest_letter.py  0014_problem_pid.py  (+5 more)
autograder/apps/rankings/: tasks.py  views.py
autograder/apps/runtests/: admin.py  urls.py  views.py
autograder/apps/tjioi/: urls.py  views.py
autograder/coderunner/: files.py  handlers.py  interactive_checker.py  runner.py
autograder/templates/contest/: contest.html  contests.html
autograder/templates/index/: potw.html  profile.html
autograder/templates/partials/: contestNavbar.html  header.html
autograder/templates/problems/: problem.html
autograder/templates/runtests/: submit.html
autograder/templates/tjioi/: login.html
config/: entrypoint.sh
(+4 files in other folders)
